Improved UX and scripts

--- a/src/partials/info.html
+++ b/src/partials/info.html
@@ -6,7 +6,7 @@
             <div class="col-xs-10">
                 <div class="row">
 
-                    <div class="col-12 title">
+                    <div class="col-xs-12 title">
 
                             <div class="svg-icon">
                                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" data-original-aspect-ratio="0.44607836464102285" style="width: 45px; height: 100px;">
@@ -21,14 +21,14 @@
                                 </svg>
                             </div>
 
-                            <span class="title1 text-uppercase" data-i18n="info.theBig">LE GRAND</span><br/>
-                            <span class="title2 text-uppercase" data-i18n="info.day">JOUR</span>
+                            <span class="title1 text-uppercase" data-i18n="info.theBig"></span><br/>
+                            <span class="title2 text-uppercase" data-i18n="info.day"></span>
                         </div>
 
                 </div>
                 <div class="row">
 
-                    <div class="col-6 col-when">
+                    <div class="col-xs-6 col-when">
 
                         <div class="col-title">
                             <div class="icon pull-left">
@@ -40,18 +40,15 @@
                                 </svg>
 
                             </div>
-                            <div class="title bold text-capitalize" data-i18n="info.left.when">Quando</div>
+                            <div class="title bold text-capitalize" data-i18n="info.left.when"></div>
                         </div>
 
-                        <div class="bold" data-i18n="info.left.date">Sabato, 1 luglio 2017</div>
-                        <p data-i18n="info.left.ceremony">
-                            Cerimonia: 16h00
-                            Cena: 19h00
-                        </p>
+                        <div class="bold" data-i18n="info.left.date"></div>
+                        <p data-i18n="info.left.ceremony"></p>
 
                     </div>
 
-                    <div class="col-6 col-where">
+                    <div class="col-xs-6 col-where">
 
                         <div class="col-title">
                             <div class="icon pull-left">
@@ -64,23 +61,14 @@
                                 </svg>
 
                             </div>
-                            <div class="title bold text-capitalize" data-i18n="info.right.where">Dove</div>
+                            <div class="title bold text-capitalize" data-i18n="info.right.where"></div>
                         </div>
 
-                        <div class="bold" data-i18n="info.right.ceremony.title">Cerimonia</div>
-                        <p data-i18n="info.right.ceremony.description">
-                            Chiesa di Santa Teresa del bambin Gesù
-                            Piazza della Chiesa
-                            Rosignano Marittimo
-                        </p>
+                        <div class="bold" data-i18n="info.right.ceremony.title"></div>
+                        <p data-i18n="info.right.ceremony.description"></p>
 
-                        <div class="bold" data-i18n="info.right.party.title">Cena</div>
-                        <p data-i18n="info.right.party.description">
-                            Villa Parisi
-                            Via Romolo Monti, 10
-                            57016 Castiglioncello (LI)
-                            www.villaparisi.com
-                        </p>
+                        <div class="bold" data-i18n="info.right.party.title"></div>
+                        <p data-i18n="info.right.party.description"></p>
 
                     </div>
                 </div>
