Changed pages to have sliding effect

--- a/src/styles/_accommodation.scss
+++ b/src/styles/_accommodation.scss
@@ -1,6 +1,6 @@
 #accommodation {
   height: 1000px;
-  background-color: $color-light-blue;
+  background-color: $color-light-green;
   color: $color-white;
 
   .title {
