--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -61,8 +61,7 @@ section {
 }
 
 #bottom {
-  height: 100px;
-  background-size: auto;
-  background: $color-dark-blue url("../images/rsvp_bg.png") repeat 50% 50%;
+  height: 80px;
+  background-color: $color-light-green;
 }
 
