--- a/src/styles/_map.scss
+++ b/src/styles/_map.scss
@@ -1,27 +1,30 @@
-#menu-popover {
-  margin-top: 10px;
-  margin-left: 40px;
-}
+#page-map {
 
-#fullscreen-popover {
-  margin-top: 10px;
-  margin-right: 40px;
-}
+  .menu-popover {
+    margin-top: 10px;
+    margin-left: 40px;
+  }
 
-#loading-map {
-  margin: 150px auto;
+  .fullscreen-popover {
+    margin-top: 10px;
+    margin-right: 40px;
+  }
 
-  font-family: $font-sacramento;
-  color: $color-dark-blue;
-  font-weight: bold;
-  font-size: 50px;
-  text-align: center;
+  .loading-map {
+    margin: 150px auto;
+
+    font-family: $font-sacramento;
+    color: $color-dark-blue;
+    font-weight: bold;
+    font-size: 50px;
+    text-align: center;
+  }
 }
 
 #map {
-    position: absolute;
-    top: 70px;
-    left: 0;
-    width: 100%;
-    height: calc(100% - 70px);
+  position: absolute;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 70px);
 }
