--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -12,12 +12,12 @@
         <div class="collapse navbar-collapse" id="main-navbar-collapse">
 
             <ul class="nav navbar-nav">
-                <li><a href="index.html#top" class="text-capitalize" data-i18n="nav.home"></a></li>
-                <li><a href="index.html#info" class="text-capitalize" data-i18n="nav.info"></a></li>
-                <li><a href="access.html" class="text-capitalize" data-i18n="nav.access"></a></li>
-                <li><a href="accommodation.html" class="text-capitalize" data-i18n="nav.accommodation"></a></li>
-                <li><a href="map.html" class="text-capitalize" data-i18n="nav.map"></a></li>
-                <li><a href="index.html#rsvp" class="text-capitalize" data-i18n="nav.rsvp"></a></li>
+                <li><a href="#/home" class="text-capitalize" data-i18n="nav.home"></a></li>
+                <li><a href="#/info" class="text-capitalize" data-i18n="nav.info"></a></li>
+                <li><a href="#/access" class="text-capitalize" data-i18n="nav.access"></a></li>
+                <li><a href="#/accommodation" class="text-capitalize" data-i18n="nav.accommodation"></a></li>
+                <li><a href="#/map" class="text-capitalize" data-i18n="nav.map"></a></li>
+                <li><a href="#/rsvp" class="text-capitalize" data-i18n="nav.rsvp"></a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right lang-selector">
