--- a/src/partials/carousel.html
+++ b/src/partials/carousel.html
@@ -1,10 +1,10 @@
 <section id="carousel">
 
-    <div class="carousel-cell"><img src="images/carousel1.jpg" /></div>
-    <div class="carousel-cell"><img src="images/carousel2.jpg" /></div>
-    <div class="carousel-cell"><img src="images/carousel3.jpg" /></div>
-    <div class="carousel-cell"><img src="images/carousel4.jpg" /></div>
-    <div class="carousel-cell"><img src="images/carousel5.jpg" /></div>
-    <div class="carousel-cell"><img src="images/carousel6.jpg" /></div>
+    <div class="carousel-cell"><img src="images/slideshow_villa_piscina.jpg" /></div>
+    <div class="carousel-cell"><img src="images/slideshow_spritz.jpg" /></div>
+    <div class="carousel-cell"><img src="images/slideshow_vespa.jpg" /></div>
+    <div class="carousel-cell"><img src="images/slideshow_mr_mrs.jpg" /></div>
+    <div class="carousel-cell"><img src="images/slideshow_ciao_bella.jpg" /></div>
+    <div class="carousel-cell"><img src="images/slideshow_villa_mare.jpg" /></div>
 
 </section>
