--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -3,18 +3,19 @@ $font-sacramento: 'Sacramento', cursive, 'Helvetica', sans-serif;
 
 $color-white: #FFFFFF;
 $color-dark-blue: #234070;
-$color-blue: #5274AC;
-$color-light-blue: rgba(172, 209, 224, 1);
-//$color-light-green: #61C9BB;
-$color-light-green: #8FC9B8;
+$color-blue: #234070;
+//$color-light-blue: #5274AC;
+$color-light-blue: #234070;
+$color-green: #8FC9B8;
 $color-yellow: #EBC52A;
-$color-gray: #B6B6B6;
+$color-green-tripadvisor: #589442;
 
 $font-size-section-title: 120px;
 $font-size-col-title: 38px;
 $font-size-text: 20px;
 
 $margin-large: 50px;
+$margin-medium: 25px;
 $margin-small: 10px;
 $margin-after-section-title: 70px;
 
