--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (<none>)
- * Config saved to config.json and <none>
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=b7a47af2c93d7ca364265922d8eb2297)
+ * Config saved to config.json and https://gist.github.com/b7a47af2c93d7ca364265922d8eb2297
  */
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
