--- a/src/partials/access.html
+++ b/src/partials/access.html
@@ -3,33 +3,30 @@
 
         <div class="row">
             <div class="col-xs-1 visible-xs">&nbsp;</div>
-            <div class="col-xs-10">
+            <div class="col-xs-10 col-sm-12">
                 <div class="row">
 
-                    <div class="col-xs-12">
+                    <div class="col-xs-12 title">
 
-                        <div class="title">
-                            <div class="svg-icon">
-                                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" data-original-aspect-ratio="0.44607836464102285" style="width: 45px; height: 100px;">
-                                    <g transform="translate(-75.68625940808106,-48.039208)">
-                                        <path
-                                                d="M83.039202 68.137244c3.72549 -5.392156,8.431371 -9.607842,14.019606 -12.450978c1.666666 -0.882353,2.549019 -2.745098,2.058823 -4.607842c-0.490196 -1.764706,-1.862745 -3.039215,-3.529411 -3.039215c-0.588235 0,-1.17647 0.196078,-1.764706 0.490196c-7.058822 3.62745,-12.843135 8.62745,-17.15686 14.901958c-0.882353 1.27451,-0.980392 2.745098,-0.294118 4.117646c0.686274 1.372549,2.156862 2.254902,3.62745 2.254902C81.274497 69.80391,82.352928 69.215675,83.039202 68.137244z"></path>
-                                        <path
-                                                d="M116.764687 95.490181c-8.235293 -1.27451,-16.470586 -1.372549,-24.705878 -0.196078c-2.058823 0.294118,-3.529411 2.058823,-3.333333 4.215686c0.196078 2.156862,1.764706 3.72549,3.823529 3.72549c0.196078 0,0.392157 0,0.588235 0c7.549018 -1.078431,14.999998 -0.980392,22.549016 0.196078c0.196078 0,0.490196 0.098039,0.686274 0.098039c2.058823 0,3.62745 -1.568627,3.823529 -3.62745C120.294098 97.549004,118.92155 95.784298,116.764687 95.490181z"></path>
-                                        <path
-                                                d="M83.33332 132.156842c-2.352941 -0.490196,-4.411764 1.17647,-4.607842 3.529411c-0.196078 2.058823,1.078431 3.823529,3.137254 4.215686c5.588234 0.980392,10.294116 3.333333,14.509802 7.156862c0.784314 0.686274,1.666666 0.980392,2.549019 0.980392c1.568627 0,3.137254 -1.078431,3.72549 -2.647058c0.588235 -1.470588,0.196078 -3.137254,-1.078431 -4.215686C96.470573 136.470566,90.294103 133.431351,83.33332 132.156842z"></path>
-                                    </g>
-                                </svg>
-                            </div>
-
-                            <span class="uppercase" data-i18n="access.title"></span>
+                        <div class="svg-icon">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" data-original-aspect-ratio="0.44607836464102285" style="width: 45px; height: 100px;">
+                                <g transform="translate(-75.68625940808106,-48.039208)">
+                                    <path
+                                            d="M83.039202 68.137244c3.72549 -5.392156,8.431371 -9.607842,14.019606 -12.450978c1.666666 -0.882353,2.549019 -2.745098,2.058823 -4.607842c-0.490196 -1.764706,-1.862745 -3.039215,-3.529411 -3.039215c-0.588235 0,-1.17647 0.196078,-1.764706 0.490196c-7.058822 3.62745,-12.843135 8.62745,-17.15686 14.901958c-0.882353 1.27451,-0.980392 2.745098,-0.294118 4.117646c0.686274 1.372549,2.156862 2.254902,3.62745 2.254902C81.274497 69.80391,82.352928 69.215675,83.039202 68.137244z"></path>
+                                    <path
+                                            d="M116.764687 95.490181c-8.235293 -1.27451,-16.470586 -1.372549,-24.705878 -0.196078c-2.058823 0.294118,-3.529411 2.058823,-3.333333 4.215686c0.196078 2.156862,1.764706 3.72549,3.823529 3.72549c0.196078 0,0.392157 0,0.588235 0c7.549018 -1.078431,14.999998 -0.980392,22.549016 0.196078c0.196078 0,0.490196 0.098039,0.686274 0.098039c2.058823 0,3.62745 -1.568627,3.823529 -3.62745C120.294098 97.549004,118.92155 95.784298,116.764687 95.490181z"></path>
+                                    <path
+                                            d="M83.33332 132.156842c-2.352941 -0.490196,-4.411764 1.17647,-4.607842 3.529411c-0.196078 2.058823,1.078431 3.823529,3.137254 4.215686c5.588234 0.980392,10.294116 3.333333,14.509802 7.156862c0.784314 0.686274,1.666666 0.980392,2.549019 0.980392c1.568627 0,3.137254 -1.078431,3.72549 -2.647058c0.588235 -1.470588,0.196078 -3.137254,-1.078431 -4.215686C96.470573 136.470566,90.294103 133.431351,83.33332 132.156842z"></path>
+                                </g>
+                            </svg>
                         </div>
 
+                        <span class="uppercase" data-i18n="access.title"></span>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-xs-12 col-sm-4">
                         <div class="text-center col-icon">
 
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" data-original-aspect-ratio="2.0869625200964967" style="width: 78px; height: 38px;">
@@ -45,23 +42,23 @@
                                 </g>
                             </svg>
 
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 462.979 462.979" style="width: 100px; height: 50px;">
+                                <g>
+                                    <path d="M72.376,388.44c-14.921,0-27.036-12.114-27.036-27.046c0-2.593,0.487-5.045,1.162-7.414    c-14.689-6.692-27.751-13.564-36.856-19.296c-3.503,8.208-5.442,17.232-5.442,26.71c0,37.653,30.531,68.183,68.181,68.183    c30.592,0,56.484-20.146,65.118-47.913c-11.267-0.417-25.646-3.603-40.948-8.359C92.137,382.229,83.028,388.44,72.376,388.44z"></path>
+                                    <path d="M76.885,265.994c-35.227,0-65.269,22.237-76.833,53.446c-3.29,8.865,149.447,82.317,157.091,44.979    c1.092-5.342,1.667-10.848,1.667-16.507C158.811,302.67,122.131,265.994,76.885,265.994z"></path>
+                                    <path d="M388.524,196.455c9.329-1.918,17.256-8.157,18.871-15.647c1.947-9.005-5.947-16.306-17.633-16.306H262.808    c-11.689,0-22.729,7.301-24.676,16.306c-1.948,9.01,5.94,16.314,17.622,16.314h11.293c10.067,22.255,30,74.498,11.638,105.8    c-23.804,40.556-109.669,42.327-120.072-33.51c-9.56-69.607,10.449-162.938,13.804-177.77    c23.478-5.983,53.373-15.128,53.373-22.979c0-10.113-44.236-14.475-63.502-15.89c-7.151-13.154-22.844-22.309-41.11-22.309    c-1.242,0-2.468,0.076-3.683,0.158c3.218,8.255,7.596,23.197,7.205,42.815c-0.298,14.812-2.771,25.868-5.26,33.366    c0.579,0.022,1.146,0.076,1.737,0.076c8.796,0,16.961-2.166,23.904-5.843c-7.271,16.04-19.093,48.007-21.348,90.173    c-0.697,12.982-10.52,25.778-23.229,28.549l-6.633,1.453c-12.709,2.757-23.017,12.321-23.017,21.365v16.362    c1.932-0.132,3.867-0.232,5.821-0.232c49.065,0,88.989,39.914,88.989,88.978c0,4.616-0.465,9.192-1.167,13.721h132.756    c-4.557-13.152-30.3-96.134,44.371-94.679c74.573,1.458,104.754,81.747,109.134,94.679h12.179c0,0,2.645-46.133-34.384-103.447    C401.035,215.34,393.489,208.307,388.524,196.455z"></path>
+                                    <path d="M373.372,391.382c-14.579,0-26.377-11.573-26.93-26.016h-40.278c0,0,4.913,67.148,67.208,67.148    c37.313,0,67.581-29.968,68.135-67.148h-41.192C399.761,379.816,387.963,391.382,373.372,391.382z"></path>
+                                    <path d="M343.821,274.013c-72.21-1.427-38.939,85.887-38.939,85.887h136.625C441.507,359.899,416.023,275.423,343.821,274.013z"></path>
+                                    <path d="M75.911,68.672c0,18.499,15.581,33.923,36.257,37.458c2.451-6.861,5.168-17.663,5.475-32.825    c0.398-19.767-4.42-34.548-7.364-41.677C90.556,35.747,75.911,50.759,75.911,68.672z"></path>
+                                </g>
+                            </svg>
+
                         </div>
-                        <div class="col-title text-center bold">In macchina</div>
-
-                        <p>
-                            In auto da nord, autostrada A12 (E80) Genova - Rosignano Marittimo: prendere direzione Livorno - Rosignano Marittimo fino al casello finale Rosignano Marittimo.
-
-                            strada statale SS1 Aurelia: prendere direzione Livorno fino alla terza uscita Castiglioncello.
-                            In auto da Sud: strada statale SS1 Aurelia (E 80, prendere direzione Grosseto - Livorno fino all'uscita Castiglioncello.
-
-                            Superstrada SGC FI-PI-LI: prendere direzione Livorno fino all'uscita Livorno, prendere strada statale SS1 Aurelia (E 80) direzione Grosseto proseguire lungo la costa sulla
-                            SS1
-                            Aurelia
-                            (E
-                            80), a Quercianella, seguire l'indicazione Castiglioncello.
-                        </p>
+                        <div class="col-title text-center bold" data-i18n="access.car.title"></div>
+                        <p data-i18n="[html]access.car.description"></p>
                     </div>
-                    <div class="col-sm-4">
+
+                    <div class="col-xs-12 col-sm-4">
                         <div class="text-center col-icon">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" data-original-aspect-ratio="1.0035040540554239" style="width: 53px; height: 52px;">
                                 <g transform="translate(0.08256244659423828,0.8970959186553955)">
@@ -70,24 +67,28 @@
                                 </g>
                             </svg>
                         </div>
-                        <div class="col-title text-center bold">In aereo</div>
 
-                        <p>
-                            Aeroporto di Pisa o Firenze.
-                            Dall'areoporto si può arrivare a Castiglioncello in taxi o in treno.
-
-                            Voli per Pisa ( a 40km )
-                            Compagnia: Easy Jet
-                            da Lione
-                            da Londra
-                            da Parigi
-
-                            Voli per Firenze ( a 115 km )
-                            Compagnia HOP da lione
-                            Compagnia Alitalia da Parigi
-                            Compagnia Swiss da Ginevra
-                        </p>
+                        <div class="col-title text-center bold" data-i18n="access.plane.title"></div>
+                        <p data-i18n="[html]access.plane.description"></p>
+                        <p data-i18n="[html]access.plane.airlines_it"></p>
+                        <p data-i18n="[html]access.plane.airlines_eu"></p>
+                        <p data-i18n="[html]access.plane.carlines"></p>
                     </div>
+
+                    <div class="col-xs-12 col-sm-4">
+                        <div class="text-center col-icon">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 612 612" style="width: 53px; height: 52px;">
+                                <g>
+                                    <path
+                                            d="M470.263,488.679h35.368c10.831,0,19.61-8.779,19.61-19.61V91.226c0-27.077-21.95-49.027-49.026-49.027h-107.65V14.21   H243.436v27.989h-107.65c-27.077,0-49.027,21.95-49.027,49.027v377.842c0,10.831,8.78,19.61,19.611,19.61h35.368L0,597.79h91.111   l111.046-109.111h207.686L520.889,597.79H612L470.263,488.679z M409.843,426.848c0-16.593,13.451-30.045,30.045-30.045   c16.593,0,30.044,13.451,30.044,30.045c0,16.593-13.451,30.045-30.044,30.045C423.294,456.893,409.843,443.44,409.843,426.848z    M174.209,456.893c-16.593,0-30.044-13.452-30.044-30.045s13.451-30.045,30.044-30.045c16.593,0,30.045,13.451,30.045,30.045   C204.254,443.44,190.802,456.893,174.209,456.893z M145.356,301.543c-5.415,0-9.805-4.39-9.805-9.805V101.864   c0-5.415,4.39-9.805,9.805-9.805h321.289c5.415,0,9.805,4.39,9.805,9.805v189.874c0,5.415-4.39,9.805-9.805,9.805H145.356   L145.356,301.543z"></path>
+                                </g>
+                            </svg>
+                        </div>
+
+                        <div class="col-title text-center bold" data-i18n="access.train.title"></div>
+                        <p data-i18n="[html]access.train.description"></p>
+                    </div>
+
                 </div>
 
             </div>
