--- a/src/partials/top.html
+++ b/src/partials/top.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Marie & Nicola Wedding</title>
 
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
 
