--- a/src/styles/_access.scss
+++ b/src/styles/_access.scss
@@ -1,7 +1,7 @@
 #access {
-  color: $color-blue;
+  color: $color-light-blue;
 
-  background: $color-light-blue url("../images/beach_bg.jpg") no-repeat fixed center center;
+  background: $color-white url("../images/bg_access.jpg") no-repeat fixed center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -15,7 +15,7 @@
       transform: rotate(234deg) translateZ(0);
 
       svg {
-        fill: $color-blue;
+        fill: $color-light-blue;
       }
     }
 
@@ -30,8 +30,6 @@
   }
 
   .col-icon {
-    height: 50px;
-
     svg {
       fill: $color-yellow;
     }
