--- a/github-prod/css/main.css
+++ b/github-prod/css/main.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (<none>)
- * Config saved to config.json and <none>
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=b7a47af2c93d7ca364265922d8eb2297)
+ * Config saved to config.json and https://gist.github.com/b7a47af2c93d7ca364265922d8eb2297
  */
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
@@ -3260,7 +3260,7 @@ header {
     font-family: "Sacramento", cursive, "Helvetica", sans-serif;
     color: #234070;
     font-weight: bold;
-    font-size: 106px;
+    font-size: 130px;
     text-align: center; }
   header #countdown-container {
     padding-top: 50px;
@@ -3291,10 +3291,10 @@ header {
     padding-left: 40px;
     display: block; }
   #info .col-when .col-title, #info .col-where .col-title {
-    margin-bottom: 10px; }
+    margin-bottom: 25px; }
     #info .col-when .col-title .icon, #info .col-where .col-title .icon {
       margin-right: 20px; }
-    #info .col-when .col-title .title, #info .col-where .col-title .title {
+    #info .col-when .col-title .subtitle, #info .col-where .col-title .subtitle {
       font-family: "Sacramento", cursive, "Helvetica", sans-serif;
       font-size: 38px; }
   #info .col-when {
@@ -3308,7 +3308,7 @@ header {
 
 #carousel {
   width: 100%;
-  padding-bottom: 50%;
+  padding-bottom: 65%;
   margin: 0;
   /* position dots in carousel */
   /* white circles */
@@ -3334,8 +3334,8 @@ header {
     background: white; }
 
 #access {
-  color: #5274AC;
-  background: #acd1e0 url("../images/beach_bg.jpg") no-repeat fixed center center;
+  color: #234070;
+  background: #FFFFFF url("../images/bg_access.jpg") no-repeat fixed center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -3345,7 +3345,7 @@ header {
     float: left;
     transform: rotate(234deg) translateZ(0); }
     #access .title .svg-icon svg {
-      fill: #5274AC; }
+      fill: #234070; }
   #access .title span {
     font-weight: bold;
     font-size: 120px;
@@ -3353,25 +3353,27 @@ header {
     padding-top: 75px;
     padding-left: 40px;
     display: block; }
-  #access .col-icon {
-    height: 50px; }
-    #access .col-icon svg {
-      fill: #EBC52A; }
+  #access .col-icon svg {
+    fill: #EBC52A; }
   #access .col-title {
     font-family: "Sacramento", cursive, "Helvetica", sans-serif;
     font-size: 38px;
     margin-bottom: 10px; }
 
 #accommodation {
-  height: 1000px;
-  background-color: #8FC9B8;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  background: #234070 url("../images/bg_accomodation.jpg") no-repeat fixed center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  padding: 0; }
   #accommodation .title .svg-icon {
     float: left;
     transform: rotate(234deg) translateZ(0); }
     #accommodation .title .svg-icon svg {
       fill: #FFFFFF; }
-  #accommodation .title span.title {
+  #accommodation .title span {
     font-weight: bold;
     font-size: 120px;
     line-height: 1em;
@@ -3384,22 +3386,38 @@ header {
     font-size: 38px; }
   #accommodation .hotels {
     color: #FFFFFF; }
+    #accommodation .hotels a {
+      color: #FFFFFF;
+      font-style: italic; }
+      #accommodation .hotels a .hover {
+        color: #FFFFFF; }
     #accommodation .hotels .hotel {
-      float: left; }
+      margin-bottom: 50px; }
       #accommodation .hotels .hotel .hotel-title {
         font-family: "Sacramento", cursive, "Helvetica", sans-serif;
         font-size: 38px;
-        color: #234070; }
-      #accommodation .hotels .hotel .hotel-icons {
-        text-align: center;
-        margin-bottom: 10px; }
-        #accommodation .hotels .hotel .hotel-icons svg {
+        color: #FFFFFF; }
+        #accommodation .hotels .hotel .hotel-title svg {
           fill: #EBC52A; }
+      #accommodation .hotels .hotel .hotel-links {
+        margin-top: 5px; }
+        #accommodation .hotels .hotel .hotel-links svg.ic_tripadvisor {
+          width: 30px;
+          height: 30px;
+          fill: #589442; }
+        #accommodation .hotels .hotel .hotel-links a.trivago {
+          margin-left: 10px; }
 
 #page-map .menu-popover {
+  position: absolute;
+  top: 70px;
+  left: 0;
   margin-top: 10px;
   margin-left: 40px; }
 #page-map .fullscreen-popover {
+  position: absolute;
+  top: 70px;
+  right: 0;
   margin-top: 10px;
   margin-right: 40px; }
 #page-map .loading-map {
@@ -3433,7 +3451,7 @@ header {
   height: calc(100% - 70px); }
 
 body {
-  background: #acd1e0 url("../images/sea_bg.jpg") no-repeat fixed center center;
+  background: #8FC9B8 url("../images/bg_sea.jpg") no-repeat fixed center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -3453,7 +3471,7 @@ body {
   height: auto;
   z-index: -100;
   transform: translateX(-50%) translateY(-50%);
-  background: transparent url("../images/sea_bg.jpg") no-repeat fixed center center;
+  background: transparent url("../images/bg_sea.jpg") no-repeat fixed center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -3464,28 +3482,15 @@ body {
   font-weight: 700; }
 
 section .container {
-  padding: 100px 0 100px 0; }
+  padding: 80px 0 80px 0; }
 section .title {
   margin-bottom: 70px; }
 
-#map-placeholder {
+.box-shadow {
   display: block;
-  max-width: 100%;
-  width: 100%;
-  height: 600px;
-  background: transparent url("../images/map_1920.png") no-repeat center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; }
-  @media only screen and (max-width: 768px) {
-    #map-placeholder {
-      background: transparent url("../images/map_768.png") no-repeat center center;
-      height: 300px; } }
-
-#bottom {
-  height: 80px;
-  background-color: #8FC9B8; }
+  -webkit-box-shadow: 0 0 20px 2px #777;
+  -moz-box-shadow: 0 0 20px 2px #777;
+  box-shadow: 0 0 20px 2px #777; }
 
 /* Get the bourbon mixin from http://bourbon.io */
 /* Reset */
