--- a/src/partials/carousel.html
+++ b/src/partials/carousel.html
@@ -1,10 +1,10 @@
 <section id="carousel">
 
     <div class="carousel-cell"><img src="images/slideshow_villa_piscina.jpg" /></div>
-    <div class="carousel-cell"><img src="images/slideshow_spritz.jpg" /></div>
-    <div class="carousel-cell"><img src="images/slideshow_vespa.jpg" /></div>
-    <div class="carousel-cell"><img src="images/slideshow_mr_mrs.jpg" /></div>
     <div class="carousel-cell"><img src="images/slideshow_ciao_bella.jpg" /></div>
+    <div class="carousel-cell"><img src="images/slideshow_toscana.jpg" /></div>
+    <div class="carousel-cell"><img src="images/slideshow_vespa.jpg" /></div>
     <div class="carousel-cell"><img src="images/slideshow_villa_mare.jpg" /></div>
+    <div class="carousel-cell"><img src="images/slideshow_mr_mrs.jpg" /></div>
 
 </section>
