--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -16,6 +16,7 @@
                 <li><a href="#/info" class="text-capitalize" data-i18n="nav.info"></a></li>
                 <li><a href="#/access" class="text-capitalize" data-i18n="nav.access"></a></li>
                 <li><a href="#/accommodation" class="text-capitalize" data-i18n="nav.accommodation"></a></li>
+                <li><a href="#/visit" class="text-capitalize" data-i18n="nav.visit"></a></li>
                 <li><a href="#/map" class="text-capitalize" data-i18n="nav.map"></a></li>
                 <li><a href="#/rsvp" class="text-capitalize" data-i18n="nav.rsvp"></a></li>
             </ul>
