--- a/src/partials/access.html
+++ b/src/partials/access.html
@@ -29,6 +29,8 @@
                     <div class="col-xs-12 col-sm-4">
                         <div class="text-center col-icon">
 
+                            <!-- CAR -->
+
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" data-original-aspect-ratio="2.0869625200964967" style="width: 78px; height: 38px;">
                                 <g transform="translate(-2.509243965148926,-19.601694635244368)">
                                     <path
@@ -59,6 +61,9 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-4">
+
+                        <!-- PLANE -->
+
                         <div class="text-center col-icon">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" data-original-aspect-ratio="1.0035040540554239" style="width: 53px; height: 52px;">
                                 <g transform="translate(0.08256244659423828,0.8970959186553955)">
@@ -70,12 +75,14 @@
 
                         <div class="col-title text-center bold" data-i18n="access.plane.title"></div>
                         <p data-i18n="[html]access.plane.description"></p>
-                        <p data-i18n="[html]access.plane.airlines_it"></p>
-                        <p data-i18n="[html]access.plane.airlines_eu"></p>
-                        <p data-i18n="[html]access.plane.carlines"></p>
+                        <p data-i18n="[html]access.plane.airlines"></p>
+                        <p data-i18n="[html]access.plane.carrent"></p>
                     </div>
 
                     <div class="col-xs-12 col-sm-4">
+
+                        <!-- TRAIN -->
+
                         <div class="text-center col-icon">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 612 612" style="width: 53px; height: 52px;">
                                 <g>
@@ -87,6 +94,20 @@
 
                         <div class="col-title text-center bold" data-i18n="access.train.title"></div>
                         <p data-i18n="[html]access.train.description"></p>
+
+                        <!-- CAR SHARING -->
+
+                        <div class="text-center col-icon">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="255.8 -15.2 505.1 434.5" style="width: 70px; height: 69px;">
+                                <path class="st0"
+                                      d="M402.5,284.6c-16.8,0-30.4,13.6-30.4,30.4c0,16.8,13.6,30.4,30.4,30.4c16.8,0,30.4-13.6,30.4-30.4  C432.9,298.2,419.3,284.6,402.5,284.6z M402.5,330.3c-8.5,0-15.4-6.9-15.4-15.4c0-8.5,6.9-15.4,15.4-15.4c8.5,0,15.4,6.9,15.4,15.4  C417.9,323.5,411,330.3,402.5,330.3L402.5,330.3z M614.1,284.6c-16.8,0-30.4,13.6-30.4,30.4s13.6,30.4,30.4,30.4  s30.4-13.6,30.4-30.4l0,0C644.5,298.2,630.9,284.6,614.1,284.6z M614.1,330.3c-8.5,0-15.4-6.9-15.4-15.4s6.9-15.4,15.4-15.4  s15.4,6.9,15.4,15.4l0,0C629.5,323.5,622.6,330.3,614.1,330.3L614.1,330.3z M658.7,256.7c7.6-9.8,5.8-23.8-3.9-31.4  c-3.9-3.1-8.8-4.7-13.7-4.7h-5.4l-10.4-36.7c-5.2-18-21.7-30.5-40.4-30.5H431.9c-18.8,0.1-35.2,12.5-40.4,30.5L381,220.6h-5.4  c-12.4,0-22.4,10-22.4,22.4c0,5,1.7,9.8,4.7,13.7c-9.7,6.7-15.5,17.7-15.5,29.4v71.3c0,7.4,6.5,12.8,21.2,17.2v23.3  c0,11.8,9.6,21.4,21.4,21.4h26.6c11.8,0,21.4-9.6,21.4-21.4v-12.9c22.9,1.8,48.5,2.7,75.1,2.7c26.6,0,52.3-0.9,75.1-2.7v12.9  c0,11.8,9.6,21.4,21.4,21.4h26.7c11.8,0,21.4-9.6,21.4-21.4v-23.3c14.8-4.4,21.2-9.9,21.2-17.2v-71.2  C674.1,274.3,668.4,263.3,658.7,256.7L658.7,256.7z M641,235.6c4.1,0,7.4,3.3,7.4,7.4c0,3-1.8,5.7-4.5,6.8l-4-14.2H641z M405.9,188  c3.3-11.6,13.9-19.6,26-19.6h152.9c12.1,0,22.7,8,26,19.6l17.7,62.4H388.2l5.7-20.1l0,0L405.9,188z M375.7,235.6h1.1l-4,14.2  c-3.8-1.6-5.5-5.9-3.9-9.7C370,237.3,372.7,235.5,375.7,235.6L375.7,235.6z M418.2,397.9c0,3.5-2.9,6.4-6.4,6.4l0,0h-26.7  c-3.5,0-6.4-2.9-6.4-6.4l0,0v-19.7c5,1,10.5,1.9,16.6,2.8c7.1,1,14.8,1.9,22.9,2.7L418.2,397.9L418.2,397.9z M637.9,397.9  c0,3.5-2.9,6.4-6.4,6.4l0,0h-26.7c-3.5,0-6.4-2.9-6.4-6.4l0,0v-14.2c8.1-0.8,15.8-1.7,22.9-2.7c6.1-0.9,11.6-1.8,16.6-2.8  L637.9,397.9L637.9,397.9z M659.1,355.7c-2.3,1.6-12,6.8-46.6,11.2c-28.7,3.7-65.7,5.7-104.2,5.7s-75.5-2-104.2-5.7  c-34.6-4.4-44.4-9.6-46.6-11.2v-69.7c0-11.4,9.3-20.7,20.7-20.7h260.2c11.4,0,20.7,9.3,20.7,20.7L659.1,355.7L659.1,355.7z   M569.3,309.4c0,4.1-3.4,7.5-7.5,7.5l0,0h-107c-4.1,0-7.5-3.4-7.5-7.5s3.4-7.5,7.5-7.5h107C566,301.9,569.3,305.3,569.3,309.4  L569.3,309.4z M550.5,330.7c0,4.1-3.4,7.5-7.5,7.5h-69.4c-4.1,0-7.5-3.4-7.5-7.5s3.4-7.5,7.5-7.5H543  C547.1,323.1,550.5,326.5,550.5,330.7C550.5,330.6,550.5,330.6,550.5,330.7L550.5,330.7z M695.2,183.7c23.5,0,42.6-19.1,42.6-42.6  s-19.1-42.6-42.6-42.6s-42.6,19.1-42.6,42.6C652.6,164.6,671.7,183.6,695.2,183.7L695.2,183.7z M695.2,113.5  c15.2,0,27.6,12.3,27.6,27.6s-12.3,27.6-27.6,27.6c-15.2,0-27.6-12.3-27.6-27.6C667.7,125.9,680,113.5,695.2,113.5L695.2,113.5z   M760.9,245.9c0,4.1-3.4,7.5-7.5,7.5h-74c-4.1,0-7.5-3.4-7.5-7.5c0-4.1,3.4-7.5,7.5-7.5h65.8c-3.7-19.7-20.9-34.1-40.9-34.1h-18.2  c-9.3,0-18.3,3.1-25.6,8.8c-3.2,2.7-7.9,2.3-10.6-0.9c-2.7-3.2-2.3-7.9,0.9-10.6c0.1-0.1,0.3-0.2,0.5-0.4c9.9-7.8,22.2-12,34.8-12  h18.2C735.5,189.4,760.9,214.7,760.9,245.9L760.9,245.9z M321.5,183.7c23.5,0,42.6-19.1,42.6-42.6c0-23.5-19.1-42.6-42.6-42.6  s-42.6,19.1-42.6,42.6C278.9,164.6,298,183.6,321.5,183.7z M321.5,113.5c15.2,0,27.6,12.3,27.6,27.6s-12.3,27.6-27.6,27.6  c-15.2,0-27.6-12.3-27.6-27.6C293.9,125.9,306.3,113.5,321.5,113.5L321.5,113.5z M337.3,253.4h-74c-4.1,0-7.5-3.4-7.5-7.5  c0-31.2,25.4-56.6,56.6-56.6h18.2c12.6,0,24.9,4.2,34.8,12c3.3,2.6,3.8,7.3,1.3,10.5c-2.6,3.3-7.3,3.8-10.5,1.3  c-7.3-5.7-16.3-8.8-25.6-8.8h-18.2c-20.1,0-37.3,14.4-40.9,34.1h65.8c4.1,0.1,7.4,3.6,7.2,7.8C344.4,250.2,341.2,253.3,337.3,253.4  L337.3,253.4z M513,69.9c23.5,0,42.6-19,42.6-42.5s-19-42.6-42.5-42.6c-23.5,0-42.6,19-42.6,42.5c0,0,0,0,0,0  C470.5,50.8,489.5,69.9,513,69.9z M513-0.2c15.2,0,27.6,12.3,27.6,27.5c0,15.2-12.3,27.6-27.5,27.6c-15.2,0-27.6-12.3-27.6-27.5  c0,0,0,0,0-0.1C485.5,12.1,497.8-0.2,513-0.2L513-0.2z M454.8,139.7h116.4c4.1,0,7.5-3.4,7.5-7.5c0-31.2-25.4-56.6-56.6-56.6H504  c-31.2,0-56.6,25.4-56.6,56.6C447.4,136.3,450.7,139.7,454.8,139.7L454.8,139.7z M504,90.6h18.2c20.1,0,37.3,14.4,40.9,34.1H463  C466.7,105,483.9,90.6,504,90.6z"></path>
+                            </svg>
+                        </div>
+
+                        <div class="col-title text-center bold" data-i18n="access.carsharing.title"></div>
+                        <p data-i18n="[html]access.carsharing.description"></p>
+
+
                     </div>
 
                 </div>
