--- a/src/partials/ic_trivago.html
+++ b/src/partials/ic_trivago.html
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" width="80" height="24" viewBox="0 0 80 24">
+<svg xmlns="http://www.w3.org/2000/svg" style="width: 80px; height: 30px;" viewBox="0 0 80 24">
     <path fill="#F48F00" d="M25.1 5.4h4l3.1 8.3h.1l2.8-8.3h3.8l-4.8 12.2h-4z"></path>
     <path fill="#007FAD"
           d="M10.4 8.4H6.7v4.1c0 .7.1 1.6.7 2 .6.4 1.5.3 2.2.2.4 0 .6-.1.8-.3v3.1c-.5.1-.9.2-1.4.3-2.6.3-6.4-.2-6.4-3.6V8.4H0v-3h2.6V1.8h4.1v3.6h3.7v3zM20.9 5.4h3.7v12.2h-3.7V5.4zm-.2-3.3c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2c-1 0-2-.9-2-2"></path>
