--- a/src/partials/info.html
+++ b/src/partials/info.html
@@ -3,7 +3,7 @@
 
         <div class="row">
             <div class="col-xs-1 visible-xs">&nbsp;</div>
-            <div class="col-xs-10">
+            <div class="col-xs-10 col-sm-12">
                 <div class="row">
 
                     <div class="col-xs-12 title">
@@ -27,7 +27,7 @@
                 </div>
                 <div class="row">
 
-                    <div class="col-xs-12 col-sm-6 col-when">
+                    <div class="col-xs-12 col-sm-6 col-left">
 
                         <div class="col-title">
                             <div class="icon pull-left">
@@ -39,14 +39,14 @@
                                 </svg>
 
                             </div>
-                            <div class="subtitle bold text-capitalize" data-i18n="info.left.when"></div>
+                            <div class="subtitle bold text-capitalize" data-i18n="info.left.title"></div>
                         </div>
 
                         <p class="text-center" data-i18n="[html]info.left.description"></p>
 
                     </div>
 
-                    <div class="col-xs-12 col-sm-6 col-where">
+                    <div class="col-xs-12 col-sm-6 col-right">
 
                         <div class="col-title">
                             <div class="icon pull-left">
@@ -59,15 +59,13 @@
                                 </svg>
 
                             </div>
-                            <div class="subtitle bold text-capitalize" data-i18n="info.right.where"></div>
+                            <div class="subtitle bold text-capitalize" data-i18n="info.right.title"></div>
                         </div>
 
-                        <p class="text-center" data-i18n="[html]info.right.description.line1"></p>
-                        <p class="text-center" data-i18n="[html]info.right.description.line2"></p>
+                        <p class="text-center" data-i18n="[html]info.right.description"></p>
 
                     </div>
                 </div>
-
             </div>
             <div class="col-xs-1 visible-xs">&nbsp;</div>
         </div>
