--- a/src/partials/access.html
+++ b/src/partials/access.html
@@ -21,7 +21,7 @@
                             </svg>
                         </div>
 
-                        <span class="uppercase" data-i18n="access.title"></span>
+                        <span class="text-uppercase" data-i18n="access.title"></span>
                     </div>
                 </div>
 
