--- a/src/partials/accommodation.html
+++ b/src/partials/accommodation.html
@@ -23,7 +23,7 @@
                                 </svg>
                             </div>
 
-                            <span class="uppercase" data-i18n="accomodation.title"></span>
+                            <span class="text-uppercase" data-i18n="accomodation.title"></span>
                         </div>
 
                         <div class="suggestions" data-i18n="[html]accomodation.suggestions"></div>
